<resources>
    <string name="app_name">One Note</string>
    <string name="notes_title_text">Notes Title</string>
    <string name="note_time_demo">3:30 PM</string>
    <string name="sample_date">17 Nov, 2018 10:35 AM</string>
    <string name="editing_note_text">Editing note</string>
    <string name="save_note_text">Save</string>
    <string name="discard_note_text">Discard</string>
    <string name="send_text">Send</string>
    <string name="lock_text">Lock</string>
    <string name="copy_text">Copy to Clipboard</string>
    <string name="master_pin">New master pin</string>
    <string name="re_master_pin">Re-inter master pin</string>
    <string name="old_pin">Old master pin</string>
    <string name="unlock_text">Unlock</string>
    <string name="enter_pin">Enter pin</string>
    <string name="search_text">Search</string>
    <string name="sort_by_text">Sort by</string>
    <string name="view_text">View</string>
    <string name="settings_text">Settings</string>
    <string name="theme_text">Theme</string>
    <string name="create_note_text">Create Note</string>
    <string name="default_sort_by">Sort by</string>
    <string name="key_sort_by_pref">key_sort_by_pref</string>
    <string name="summary_sort_by">Set default sort by</string>
    <string name="summary_view">Set default view</string>
    <string name="key_view_pref">key_view_pref</string>
    <string name="key_theme_key">key_theme_key</string>
    <string name="summary_theme">Set default theme</string>
    <string name="security_text">Security</string>
    <string name="about_text">About</string>
    <string name="summary_about">Summary About</string>
    <string name="app_version">1.0</string>
    <string name="title_version">Version</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="title_send_feedback">Feedback</string>
    <string name="summary_support">Got any query? and give feedback to help us</string>
    <string name="master_pin_text">Master pin</string>
    <string name="master_pin_summary">Set, reset or clear your master pin</string>
    <string name="master_pin_key">master_pin_key</string>
    <string name="change">Change</string>
    <string name="clear_pin">Clear master pin</string>
    <string name="share_text">Share</string>
    <string name="like_text">Like apps</string>
    <string name="more_apps">More apps</string>

    <string name="admob_app_id">ca-app-pub-5955711392214204~7905543740</string>
    <string name="banner_unit_id">ca-app-pub-5955711392214204/3477190057</string>
    <string name="interstitial_unit_id">ca-app-pub-5955711392214204/7330828673</string>
    <string name="interstitial_video_unit_id">ca-app-pub-3940256099942544/8691691433</string>
    <string name="reward_video_unit_id">ca-app-pub-5955711392214204/3588870691</string>
    <string name="native_advanced_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_advanced_video_unit_id">ca-app-pub-3940256099942544/1044960115</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="note_title">Note Title</string>
    <string name="type_notes_here">Type notes here</string>

</resources>
