<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search_text"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_black"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sort"
                android:icon="@drawable/ic_short_black"
                android:title="@string/sort_by_text"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_view"
                android:icon="@drawable/ic_view_list_black"
                android:title="@string/view_text"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/settings_text"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share_black"
                android:title="@string/share_text"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_like"
                android:icon="@drawable/ic_like_black"
                android:title="@string/like_text"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_more_apps"
                android:icon="@drawable/ic_more_apps_black"
                android:title="@string/more_apps"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>